## configuration file

AC_INIT([QMC], 0.1)

## set build directory
BUILD_DIR=`pwd`
AC_SUBST([BUILD_DIR], [$BUILD_DIR])

## Configuration files
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([Makefile.common])
AC_CONFIG_FILES([Configurations/Makefile])
AC_CONFIG_FILES([Configurations/VMCconfig.cpp])
AC_CONFIG_FILES([Configurations/VMCconfig.h])
AC_CONFIG_FILES([Configurations/JastrowConfig.h])
AC_CONFIG_FILES([Configurations/Test/JastrowConfig_Test.cpp])
AC_CONFIG_FILES([Configurations/Test/Makefile])
AC_CONFIG_FILES([Energy_Terms/Makefile])
AC_CONFIG_FILES([Energy_Terms/SymHoLocalE.cpp])
AC_CONFIG_FILES([Energy_Terms/SymHoLocalE.h])
AC_CONFIG_FILES([Energy_Terms/SymHoLocalESqd.cpp])
AC_CONFIG_FILES([Energy_Terms/SymHoLocalESqd.h])
##AC_CONFIG_FILES([Energy_Terms/Test/Makefile])
##AC_CONFIG_FILES([Energy_Terms/Test/Energy_test.cpp])
AC_CONFIG_FILES([Utilities/Makefile])
AC_CONFIG_FILES([Utilities/rand.cpp])
AC_CONFIG_FILES([Utilities/rand.h])
AC_CONFIG_FILES([Utilities/StringUtilities.h])
AC_CONFIG_FILES([Utilities/VMCPoint.h])
AC_CONFIG_FILES([Metropolis_Walker/VMCMetropolisWalker.h])
AC_CONFIG_FILES([Metropolis_Walker/Test/Makefile])
AC_CONFIG_FILES([Metropolis_Walker/Test/walker_test.cpp])
AC_CONFIG_FILES([Parser/HandlerIndex.h])
AC_CONFIG_FILES([Parser/TParser.cpp])
AC_CONFIG_FILES([Parser/TParser.h])
AC_CONFIG_FILES([Parser/TConfigParser.cpp])
AC_CONFIG_FILES([Parser/TConfigParser.h])
AC_CONFIG_FILES([Parser/Makefile])
AC_CONFIG_FILES([Wavefunctions/Makefile])
AC_CONFIG_FILES([Wavefunctions/EffectiveRangeF.cpp])
AC_CONFIG_FILES([Wavefunctions/EffectiveRangeF.h])
AC_CONFIG_FILES([Wavefunctions/HardSphereF.cpp])
AC_CONFIG_FILES([Wavefunctions/HardSphereF.h])
AC_CONFIG_FILES([Wavefunctions/HomogeneousPhi.cpp])
AC_CONFIG_FILES([Wavefunctions/HomogeneousPhi.h])
AC_CONFIG_FILES([Wavefunctions/NonInteractingF.cpp])
AC_CONFIG_FILES([Wavefunctions/NonInteractingF.h])
AC_CONFIG_FILES([Wavefunctions/Phi.cpp])
AC_CONFIG_FILES([Wavefunctions/Phi.h])
AC_CONFIG_FILES([Wavefunctions/SymHoPhi.cpp])
AC_CONFIG_FILES([Wavefunctions/SymHoPhi.h])
AC_CONFIG_FILES([Wavefunctions/TIntF.cpp])
AC_CONFIG_FILES([Wavefunctions/TIntF.h])
AC_CONFIG_FILES([Wavefunctions/Test/Makefile])
AC_CONFIG_FILES([Wavefunctions/Test/HomogeneousPhi_test.cpp])
AC_CONFIG_FILES([Wavefunctions/Test/SymHoPhi_test.cpp])
AC_CONFIG_FILES([Wavefunctions/Test/EffectiveRangeF_test.cpp])
AC_CONFIG_FILES([Wavefunctions/Test/NonInteractingF_test.cpp])
AC_CONFIG_FILES([Wavefunctions/Test/HardSphereF_test.cpp])

AC_OUTPUT
